<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_textview_logo"
                android:padding="20dp"
                android:text="@string/LogoName"
                android:textAlignment="center"
                android:textColor="@color/Base_text_color"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@null"
                android:src="@drawable/welcome_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/my_page_element_color"
                android:padding="15dp"
                android:text="@string/my_page_element_account"
                android:textColor="@color/Base_text_color" />

            <LinearLayout
                android:id="@+id/my_page_account_Layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/SystemID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/SystemIdValue" />

                <TextView
                    android:id="@+id/UserID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="end"
                    android:padding="12dp"
                    android:text="@string/UserIdValue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_account_Layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/SystemName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/SystemNameValue" />

                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="end"
                    android:padding="12dp"
                    android:text="@string/UserNameValue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_account_Layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/SystemPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/SystemPhoneValue" />

                <TextView
                    android:id="@+id/UserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="end"
                    android:padding="12dp"
                    android:text="@string/UserPhoneValue" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/my_page_element_color"
                android:padding="15dp"
                android:text="@string/my_page_element_account"
                android:textColor="@color/Base_text_color" />

            <LinearLayout
                android:id="@+id/my_page_rating_Layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/system_rating1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/SystemIdValue" />

                <TextView
                    android:id="@+id/user_rating1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="end"
                    android:padding="12dp"
                    android:text="@string/UserIdValue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_rating_Layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/System_rating2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/SystemNameValue" />

                <TextView
                    android:id="@+id/User_rating2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="end"
                    android:padding="12dp"
                    android:text="@string/UserNameValue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_rating_Layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/System_rating3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/SystemPhoneValue" />

                <TextView
                    android:id="@+id/User_rating3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="end"
                    android:padding="12dp"
                    android:text="@string/UserPhoneValue" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/my_page_element_color"
                android:padding="15dp"
                android:text="@string/CustomerServiceValue"
                android:textColor="@color/Base_text_color" />

            <LinearLayout
                android:id="@+id/my_page_account_Layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_page_element_list"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="60dp">
                    <Button
                        android:id="@+id/btn_customer_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="고객센터"
                        android:textColor="@color/Base_text_color"
                        android:backgroundTint="@color/logo_bar_color"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
